Fix Strategies box in IE6/7.  Fix gaps on home page in IE6/7.
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@28183 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/CryptoDB.css
+++ b/Site/htdocs/assets/css/CryptoDB.css
@@ -378,6 +378,10 @@ img {
 	width: 247px;
 }
 
+.threecolumndivimg {
+	display: block;
+}
+
 #info {
    width: 209px;
    min-height: 240px;
@@ -617,7 +621,11 @@ div#menu ul ul ul li:hover ul {
 #menu_lefttop a.heading:hover {
 	color: #CCCCCC;
 	display: block;
-	}	
+	}
+
+#menu_lefttop img {
+        display: block;
+}	
 	
 #menu_lefttop div {
 	height: auto;
@@ -864,8 +872,12 @@ a.heading:hover + a.detail_link, .detail_link:hover {
 	 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
-table .3column {
+table.threecolumn {
 	clear: both;
+}
+
+table.threecolumn td {
+        vertical-align: top;
 }
 
 td.headerrow {
